<resources>
    <string name="app_name">GeoHelp</string>
    <string name="action_settings">Settings</string>

    <!-- appi Key de PARSE-->
    <string name="parse_app_id">NFN9yo59mKOdg9Qf9xeNp3cC5Zxx0PDEySd2zPHl</string>
    <string name="parse_client_key">MeBJrUsWc6OUPHSFlYiPVxgjqRtfIWBYIhzojMwj</string>

    <!-- home -->
    <string name="title_home">GeoHelp ayuda</string>
    <string name="menu_help_someone">Ayudar a alguien</string>
    <string name="menu_help_me">Necesito ayuda</string>
    <string name="menu_my_helps">Mis ayudas</string>
    <string name="menu_settings">Ajustes</string>


    <!-- Login y registro -->

    <string name="ask_to_register">¿No tienes cuenta? Registrate </string>
    <string name="create_user_password">Contraseña</string>
    <string name="create_user_confirm_password">Confirmar contraseña</string>
    <string name="create_user_lasttname">Apellidos</string>
    <string name="create_user_firsttname">Nombre</string>
    <string name="login_email">Correo electrónico</string>
    <string name="create_user_confirm">Confirmar</string>
    <string name="header_user_confirm">Verificación de contraseña</string>
    <string name="header_user_data">Datos de usuario</string>


    <!-- Settings-->
    <string name="title_settings">Ajustes</string>
    <string name="logout_user">Cerrar sesión</string>


    <!-- Help someone-->
    <string name="title_tab_list">Lista</string>
    <string name="title_tab_map">Mapa</string>

</resources>
