<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
    <RelativeLayout

        android:id="@+id/header_data_user"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:background="@color/gray_header"
        android:layout_alignParentStart="true">
        <TextView
            android:paddingLeft="10dp"
            android:id="@+id/D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header_user_data"
            android:layout_centerVertical="true" />


    </RelativeLayout
        >
    <RelativeLayout
        android:id="@+id/layout_username_create"
        android:layout_below="@+id/header_data_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true">

        <com.example.javier.geohelp.Activities.Components.EmailEditText
            android:id="@+id/correo_parent_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true">
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/login_email"
                />
        </com.example.javier.geohelp.Activities.Components.EmailEditText>
    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/layout_username_create"
        android:id="@+id/layout_first_name_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/firstname_textview"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true">

            <EditText
                android:id="@+id/firstname_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_user_firsttname"
                />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_below="@+id/layout_first_name_create"
        android:id="@+id/layout_last_name_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/lastname_textview"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true">

            <EditText
                android:id="@+id/lastname_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_user_lasttname"
                />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/layout_last_name_create"
        android:id="@+id/header_password"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:background="@color/gray_header"
        android:layout_alignParentStart="true">
        <TextView
            android:paddingLeft="10dp"
            android:id="@+id/password_tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/header_user_confirm"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/header_password"
        android:id="@+id/layout_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true">
        <com.example.javier.geohelp.Activities.Components.PasswordEditText
            android:id="@+id/pass_textview"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true">

            <EditText
                android:id="@+id/pass_create"
                android:inputType ="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_user_password"
                />
        </com.example.javier.geohelp.Activities.Components.PasswordEditText>
    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/layout_pass"
        android:id="@+id/layout_confirm_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true">
        <com.example.javier.geohelp.Activities.Components.PasswordEditText
            android:id="@+id/confirm_pass_textview"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true">
            <EditText
                android:id="@+id/confirm_pass_create"
                android:inputType ="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_user_confirm_password"
                />
        </com.example.javier.geohelp.Activities.Components.PasswordEditText>
    </RelativeLayout>





    <LinearLayout
        android:layout_below="@id/layout_confirm_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/relativeLayout">
        <Button
            android:id="@+id/confirm_data"
            android:layout_width="wrap_content"
            android:text="@string/create_user_confirm"
            android:layout_height="wrap_content" />

    </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>